<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Stock Hawk</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="string_symbol">symbol</string>
    <string name="action_change_units" translatable="false">Change Units</string>
    <string name="symbol_search">Symbol Search</string>
    <string name="content_test">Search for a Stock Symbol</string>
    <string name="add_stock">Search for a Stock</string>
    <string name="input_hint">FB</string>
    <string name="input_prefill"></string>
    <string name="change_label">Change</string>
    <string name="todays_date">Todays Date</string>
    <string name="bid">Bid</string>
    <string name="change">Change</string>
    <string name="Time">Time</string>
    <string name="ask">Ask</string>
    <string name="tag" translatable="false">tag</string>
    <string name="symbol_error">symbol error</string>
    <string name="symbol_found" translatable="false">status ok</string>
    <string name="price">Price</string>
    <string name="price_label">Bid Price</string>
    <string name="Current_label" translatable="false">Current Price</string>
    <string name="network_toast">Uh-oh! This app requires an internet connection</string>
    <string name="your_stock">your stocks</string>
    <string name="stock_widget">stocks</string>
    <string name="empty_stock_list">No Stock Information Available</string>
    <string name="add_widget" translatable="false">Add widget</string>
</resources>
