<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleType="center"
    tools:context=".activities.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue"
        android:orientation="vertical">
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*"
            xmlns:android="http://schemas.android.com/apk/res/android">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/md_material_blue_600">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="@color/white_color"
                    android:contentDescription="@string/string_symbol"
                    android:text="@string/string_symbol" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="@color/white_color"
                    android:contentDescription="@string/bid"
                    android:text="@string/bid" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white_color"
                    android:gravity="center_horizontal"
                    android:contentDescription="@string/change"
                    android:text="@string/change" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white_color"
                    android:gravity="center_horizontal"
                    android:contentDescription="@string/Time"
                    android:text="@string/Time" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/md_material_blue_600"
                >
                <TextView
                    android:id="@+id/symbol_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:contentDescription="@string/string_symbol"/>
                <TextView
                    android:id="@+id/bid_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:contentDescription="@string/bid"/>

                <TextView
                    android:id="@+id/change_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:contentDescription="@string/change_label"/>
                <TextView
                    android:id="@+id/date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:contentDescription="@string/Time"/>
            </TableRow>
        </TableLayout>
                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.db.chart.view.LineChartView
                        xmlns:chart="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/linechart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </FrameLayout>

            </LinearLayout>
</android.support.design.widget.CoordinatorLayout>