<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@color/white_color" >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_vertical"
      android:minHeight="?android:attr/listPreferredItemHeight"
      android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
      android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
      android:orientation="horizontal">

    <TextView
        android:id="@+id/stock_symbol"
        style="@style/StockSymbolTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:textColor="@color/md_material_blue_800"
        android:paddingRight="@dimen/symbol_name"
        android:contentDescription="@string/string_symbol"
        tools:text="GOOG"
        />

    <TextView
        android:id="@+id/date"
        style="@style/StockSymbolDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:textColor="@color/md_material_blue_800"
        android:paddingRight="@dimen/symbol_name"
        android:contentDescription="@string/todays_date"
        tools:text="May, 1, 2016"
        />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="7"
        android:orientation="vertical">

    </LinearLayout>

    <TextView
        android:id="@+id/bid_price"
        style="@style/BidPriceTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black_color"
        android:paddingRight="10sp"
        android:contentDescription="@string/bid"
        tools:text="1000.00"
        />

    <TextView
        android:id="@+id/change"
        android:background="@drawable/percent_change_pill"
        style="@style/PercentChangeTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        tools:text="100%"
        />

  </LinearLayout>
</LinearLayout>